source/_assets/sass/episode/content-heading.scss
@import '../colors';

.episode__cover {
  &__image {
    width: 100%;
    height: auto;
    border-radius: 5px;
  }

  &__details {
    color: $secondary-title-color;
    text-align: center;
    display: block;
    font-size: 14px;
    font-weight: 200;
    line-height: 16px;
    padding: 5px 0;

    &--bold {
      font-weight: 600;
    }
  }
}

